--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -172,7 +172,7 @@ services:
       LAMBDA_EXECUTOR: docker
       LAMBDA_REMOTE_DOCKER: "false"
     volumes:
-      - localstack_data:/tmp/localstack
+      - localstack_data:/var/lib/localstack
       - /var/run/docker.sock:/var/run/docker.sock
       - ./infrastructure/localstack-init:/etc/localstack/init/ready.d
     networks:
