Refactor CI workflow for verifying E-Commerce Platform services; streamline steps and enhance logging for better debugging

--- a/.github/workflows/verify.infrastructure.yml
+++ b/.github/workflows/verify.infrastructure.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y docker-compose curl jq awscli postgresql-client
+          sudo apt-get install -y docker compose curl jq awscli postgresql-client
 
       - name: Make scripts executable
         run: |
