--- a/.github/workflows/verify.infrastructure.yml
+++ b/.github/workflows/verify.infrastructure.yml
@@ -8,48 +8,38 @@ on:
 jobs:
   verify:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install docker-compose v1
+      - name: Set up Docker (already included)
+        run: docker --version
+
+      - name: Check Docker Compose availability
+        run: docker compose version
+
+      - name: Install AWS CLI
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y docker-compose
-
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y docker compose curl jq awscli postgresql-client
-
-      - name: Make scripts executable
-        run: |
-          chmod +x scripts/*.sh
-          chmod +x infrastructure/localstack-init/init.sh
+          sudo apt-get install -y python3-pip
+          pip3 install awscli --upgrade --user
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          aws --version
 
       - name: Start infrastructure
-        run: |
-          ./scripts/start-infrastructure.sh
-          echo "Waiting for services to initialize..."
-          sleep 60  # You can fine-tune this if your services start faster
+        run: docker compose -f docker-compose.yml up -d
 
-      - name: Verify running services
-        run: |
-          ./scripts/verify-services.sh
+      - name: Wait for services
+        run: ./scripts/verify-services.sh
 
       - name: Show logs on failure
         if: failure()
         run: |
           echo "Dumping docker logs for debugging..."
           docker ps -a
-          docker-compose logs --tail=100
+          docker compose logs --tail=100
 
       - name: Stop and clean up
         if: always()
-        run: |
-          docker-compose down -v
+        run: docker compose down -v
